plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/features/projectIsolation/jvmOnJvmJavaAndKotlin/utils/src/main/java/DateUtils.java
package com.example.utils;

import java.time.LocalDate;

public class DateUtils {
    public static String <!LINE_MARKER("descr='Inferred annotations available.Full signature: @NotNull StringgetCurrentDate()'")!>getCurrentDate<!>() {
        return LocalDate.now().toString();
    }
}
